﻿added c++ specific compiler options, this means the versioning actually does something now
11/12/2023