@@ -1,2 +1,5 @@
 ﻿added c++ specific compiler options, this means the versioning actually does something now
 11/12/2023
+
+added std::optional for c++17 or greater
+11/12/2023
